# 157-3

./: .env.template  .gitignore  1111.md  ADVANCED_PATTERN_IMPLEMENTATION_PLAN.md  AGENT_BRIDGE_INTEGRATION_BATCH.py  AGENT_COOPERATION_IMPLEMENTATION_PLAN.md  AGENT_MAPPING_RESOLUTION_COMPLETE.md  AI_ARCHITECTURE_IMPROVEMENT_PLAN.md  ANALYTICS_INTEGRATION_REPORT.md  COMPREHENSIVE_AI_MODEL_MIGRATION_PLAN.md  COMPREHENSIVE_INDICATOR_AUDIT.py  COMPREHENSIVE_INTEGRATION_ANALYSIS.md  CRITICAL_PERFORMANCE_OPTIMIZATION_PLAN.md  CROSS_DRIVE_OPTIMIZATION_GUIDE.md  DRIVE_MIGRATION_COMPLETED.md  EXECUTIVE_SUMMARY_PRODUCTION_READINESS.md  FINAL_VERIFICATION_REPORT.md  INDICATOR_RECOVERY_PLAN.md  INDICATOR_REMEDIATION_PHASE2.md  INDICATOR_TRUTH_REPORT.json  MCP-COORDINATION-COMPLETE.md  PLATFORM3_AI_READINESS_IMPLEMENTATION_PLAN.md  PLATFORM3_CCI_IMPLEMENTATION_COMPLETE.md  PLATFORM3_OPTIMIZATION_IMPLEMENTATION_PLAN.md  PLATFORM3_VERIFICATION_SUMMARY.md  PLATFORM_CLEANUP_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  PROGRESS.md  Platform3-MCP.code-workspace  Platform3.code-workspace  README.md  REGISTRY_FIX_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  __init__.py  _copilot_validation_temp.py  accurate_indicator_count.py  adaptive_indicator_test_report.json  agent_analysis_summary.md  agent_implementations_complete.py  agent_indicator_analysis_report_20250607_072339.txt  (+219 more)
.copilot/: agent-instructions.md  workspace-context.json
Platform3/: COMPLETION_SUMMARY.md  ComprehensiveIndicatorAdapter_67.py  ENTERPRISE_DEPLOYMENT_COMPLETE.md  ENTERPRISE_DEPLOYMENT_FILES.md  IMPLEMENTATION_REPORT.md  INDICATOR_AUDIT_REPORT.md  INDICATOR_INTEGRATION_COMPLETE.md  PLATFORM_COMPLETION_SUMMARY.md  PROGRESS.md  READY_INDICATORS_LIST.md  adapter_usage_examples.py  complete_enterprise_validation.json  comprehensive_indicator_audit.py  comprehensive_validation_suite.py  docker-compose.yml  enterprise-deployment-framework.md  enterprise_test_results.json  indicator_audit_results.json  simple_component_test.py  swingtrading.py  test-platform.js  test-report.json  test_adapter_debug.py  test_all_67_indicators.py  test_all_indicator_fixes.py  test_autoencoder_features_fix.py  test_complete_enterprise_framework.py  test_elliott_wave_fix.py  test_enterprise_deployment.py  test_every_indicator.py  test_exactly_67_indicators.py  test_implemented_components.py  test_indicator_fixes.py  test_indicator_functionality.py  test_scalping_lstm_fix.py  test_syntax_fix.py  test_typescript_compilation.py  test_universal_adapter.py  test_volume_analysis_fix.py  typescript_compilation_results.json  (+1 more)
ai-platform/: __init__.py  ai_platform_manager.py  bridge_launcher.py  requirements.txt  rest_api_server.py  websocket_server.py
ai_services/: __init__.py  model_registry.py
archives/: old_platform3_verification_report.json
backup_complete_files_final/: momentum_indicators_complete.py
backup_consolidated_files/: fractal_indicators_complete.py  pattern_indicators_complete.py
certs/: ca-cert.pem  ca-key.pem  certificate_summary.txt
config/: agent_communication.conf  deployment_config.yaml  development.yaml  infrastructure_config.yaml  platform3_config.json  production.yaml  production_config.yaml  scaling_config.yaml
database/: setup_database.ps1
docs/: GANN_SIGNAL_GENERATION.md  configuration-management-complete.md  performance-test-results.md
engines/: __init__.py  base_pattern.py  indicator_base.py  indicator_base.py.backup_advanced  indicator_base.py.backup_syntax  indicator_base.py.doc_backup  indicator_base.py.error_backup  indicator_base.py.pre_restore_backup  indicator_registry.py
infrastructure/: docker-compose.yml  setup-dev-environment.sh
interfaces/: candlestick_patterns.ts
k8s/: network-policies.yaml
models/: README.md  __init__.py  market_data.py  platform3_harmony_monitor.py  registry.py
performance_reports/: performance_metrics_20250604_224035.csv  performance_metrics_20250604_224455.csv  performance_report_20250604_224035.json  performance_report_20250604_224455.json
platform3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
platform3_logging/: platform3_logger.py
refactored_structure/: REFACTORING_PLAN.md  REFACTORING_PROGRESS_REPORT.md  docker-compose.yml  package.json  pyproject.toml
refactored_structure/core/agents/: __init__.py
refactored_structure/core/agents/implementations/: execution_expert.py  risk_genius.py
refactored_structure/core/indicators/: __init__.py
refactored_structure/core/services/: __init__.py
refactored_structure/docs/implementation/: AGENT_PATTERNS.md  GENIUS_AGENT_MAPPING.md  INDICATOR_REGISTRY.md  INDICATOR_STANDARDS.md
refactored_structure/docs/reports/: CODE_QUALITY_REPORT.md
refactored_structure/tools/analysis/: indicator_analysis.py  registry_analysis.py
refactored_structure/tools/utilities/: file_cleanup.py
refactored_structure/tools/validation/: comprehensive_validation.py
registry_backup/: preservation_validation_results.json  registry_component_mapping.md  registry_original_backup.py  registry_preservation_analysis.md  validate_preservation.py
reports/: audit_report.json  implementation_timeline.md  indicator_audit_report.json  platform3_integration_progress_report.md  remaining_issues_implementation_plan.md
scripts/: configure-database-mode.js  integration-test.js  production-validation.sh  run-complete-validation.sh  run-e2e-validation.js  (+11 more)
(+2088 files in other folders)
